eks/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: utopia
  labels:
    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
