eks/auth-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: utopia
  labels:
    app: auth
    app.kubernetes.io/name: utopia-auth
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: utopia-auth
      app: auth
  template:
    metadata:
      labels:
        app: auth
        app.kubernetes.io/name: utopia-auth
    spec:
      containers:
        - name: auth
          image: "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/nr-utopia-auth"
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  namespace: utopia
  name: auth-service
  labels:
    app: auth
    app.kubernetes.io/name: utopia-auth
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
  selector:
    app.kubernetes.io/name: utopia-auth
