eks/booking-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: utopia
  labels:
    app: booking
    app.kubernetes.io/name: utopia-booking
  name: booking-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: utopia-booking
      app: booking
  template:
    metadata:
      labels:
        app: booking
        app.kubernetes.io/name: utopia-booking
    spec:
      containers:
        - name: booking
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/nr-utopia-booking
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  namespace: utopia
  name: booking-service
  labels:
    app: booking
    app.kubernetes.io/name: utopia-booking
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  selector:
    app.kubernetes.io/name: utopia-booking
