eks/flight-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: utopia
  labels:
    app: flight
    app.kubernetes.io/name: utopia-flight
  name: flight-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight
      app.kubernetes.io/name: utopia-flight
  template:
    metadata:
      labels:
        app: flight
        app.kubernetes.io/name: utopia-flight
    spec:
      containers:
        - name: flight
          image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/nr-utopia-flight
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  namespace: utopia
  name: flight-service
  labels:
    app: flight
    app.kubernetes.io/name: utopia-flight
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  selector:
    app.kubernetes.io/name: utopia-flight
