eks/user-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: utopia
  labels:
    app: user
    app.kubernetes.io/name: utopia-user
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      app.kubernetes.io/name: utopia-user
  template:
    metadata:
      labels:
        app: user
        app.kubernetes.io/name: utopia-user
    spec:
      containers:
        - name: user
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/nr-utopia-user
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  namespace: utopia
  name: user-service
  labels:
    app: user
    app.kubernetes.io/name: utopia-user
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  selector:
    app.kubernetes.io/name: utopia-user
